[package]
name = "rreflect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch-mirrors = "0.1.1"
crossbeam = "0.8.2"
crossbeam-utils = "0.8.15"
threadpool = "1.8.1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
ureq = "2.6.2"
url = "2.3.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4.17"
env_logger = "0.10.0"

